--- a/phpspec.yml
+++ b/phpspec.yml
@@ -1,5 +1,5 @@
 suites:
     main:
-        namespace: App
-        psr4_prefix: App
+        namespace: Depotwarehouse\SC2CTL\Web
+        psr4_prefix: Depotwarehouse\SC2CTL\Web
         src_path: app
