--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"barryvdh/laravel-ide-helper": "~2.0",
 		"illuminate/html": "~5.0",
 		"depotwarehouse/toolbox": "~2.0.1",
-		"intervention/image": "~2.1"
+		"intervention/image": "~2.1",
+		"depotwarehouse/oauth2-bnet": "~1.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
